<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="order"
            type="com.anas.fishday.entities.Order"/>
        <variable
            name="cartOnClickListener"
            type="android.view.View.OnClickListener"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cartCoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context="com.anas.fishday.screens.main.fragments.cart.CartFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/costLayout"/>
            <RelativeLayout
                android:id="@+id/costLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/orderNowBtn"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="25dp"
                            style="@style/TextWhite"
                            android:text="@string/sub_total"/>

                        <TextView
                            android:id="@+id/subTotalTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            style="@style/TextWhite" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="25dp"
                            style="@style/TextWhite"
                            android:text="@string/delivery"/>

                        <TextView
                            android:id="@+id/deliveryTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            style="@style/TextWhite" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="25dp"
                            style="@style/TextWhite"
                            android:text="@string/total"/>

                        <TextView
                            android:id="@+id/totalTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            style="@style/TextWhite" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
            <Button
                android:id="@+id/orderNowBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_bg_blue"
                style="@style/TextWhite"
                android:text="@string/order_now"
                android:onClick="@{cartOnClickListener::onClick}"/>
        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>